--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-android-sms-listener": "^0.8.0",
     "react-native-cli": "^2.0.1",
     "react-native-local-storage": "^1.5.2",
-    "react-native-sha256": "^1.4.7"
+    "react-native-sha256": "^1.4.7",
+    "react-native-webview": "^11.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
