--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-android-sms-listener": "^0.8.0",
+    "react-native-background-timer": "^2.4.1",
     "react-native-cli": "^2.0.1",
     "react-native-local-storage": "^1.5.2",
     "react-native-sha256": "^1.4.7",
