--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "nvm": "0.0.4",
     "react": "17.0.1",
     "react-native": "0.64.0",
-    "react-native-android-sms-listener": "^0.8.0",
+    "react-native-android-sms-listener": "git+https://github.com/anoopchaurasia/react-native-android-sms-listener.git",
     "react-native-background-timer": "^2.4.1",
     "react-native-cli": "^2.0.1",
     "react-native-local-storage": "^1.5.2",
     "react-native-sha256": "^1.4.7",
+    "react-native-sound": "^0.11.0",
+    "react-native-svg": "^12.1.1",
     "react-native-webview": "^11.4.3"
   },
   "devDependencies": {
