UI enhancement and permission

--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "nvm": "0.0.4",
+    "promise.allsettled": "^1.0.4",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-android-sms-listener": "git+https://github.com/anoopchaurasia/react-native-android-sms-listener.git",
     "react-native-background-timer": "^2.4.1",
     "react-native-cli": "^2.0.1",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-disable-battery-optimizations-android": "^1.0.7",
     "react-native-local-storage": "^1.5.2",
+    "react-native-paper": "^4.8.1",
     "react-native-sha256": "^1.4.7",
     "react-native-sound": "^0.11.0",
     "react-native-svg": "^12.1.1",
