--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "nvm": "0.0.4",
-    "promise.allsettled": "^1.0.4",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-android-sms-listener": "git+https://github.com/anoopchaurasia/react-native-android-sms-listener.git",
@@ -20,11 +19,10 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-disable-battery-optimizations-android": "^1.0.7",
     "react-native-local-storage": "^1.5.2",
+    "react-native-notification-sounds": "^0.5.3",
     "react-native-paper": "^4.8.1",
     "react-native-sha256": "^1.4.7",
-    "react-native-sound": "^0.11.0",
-    "react-native-svg": "^12.1.1",
-    "react-native-webview": "^11.4.3"
+    "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
